update dish and paging search for customer